<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">TTTLE</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_sovled">the case is solved.</string>
    <string name="crime_report_unsolved">the case is not solved</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_no_suspect">no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo">Crime Photo</string>
</resources>
